bug causing different button color on mobile resolved

--- a/src/styling/Mapside.scss
+++ b/src/styling/Mapside.scss
@@ -72,6 +72,7 @@
           }
           button {
             border: none;
+            color: inherit;
             i {
               cursor: pointer;
             }
